# LCH-Farrow01

./: .gitignore  CLAUDE.md  CMakeLists.old_ubuntu  CMakeLists.txt  CMakeLists_old_2026_01_21.txt  CMakePresets._old_ubuntu.json  GENERATOR_GPU_USAGE.md  Project_map.md  README.md  Untitled  VSCODE_SETUP.md  lagrange_matrix.json  run.bat  run.sh
Doc/: Classes_and_Structures_Documentation.md  GPUMemoryBuffer_Detailed.md  GeneratorGPU_Detailed.md  MULTITHREADED_KERNEL.md   OpenCLComputeEngine_Detailed.md  Пишем BIN файл.md
Doc/CMake/: CMakeLists.ubuntu  CMakePresets.ubuntu  ubuntu подключить OpenCl в проекте СMakeList _снач.md  ~!~~внимание.txt  Это не правильно_{_  _version__ 3,_  _configurePre.md
Doc/CMake/1/: FIX_clFFT_Windows_Safe.md
Doc/CMake/2026-01-21/: CMAKE_STRUCTURE_GUIDE.md  CMakeLists_ROOT.txt  CMakePresets-NEW.json  CMakePresets-SIMPLIFIED.json  FINAL_SUMMARY.txt  FIX_LINKING_ERRORS.md  GPU-CMakeLists.txt  INDEX.md  INSTALLATION_SUMMARY.md  ManagerOpenCL-CMakeLists-FIXED.txt  ManagerOpenCL-CMakeLists.txt  QUICK_START.md  README_CMAKE.txt  SETUP_FOR_YOUR_SYSTEM.md  Test-CMakeLists.txt  compiler-options.cmake  debug-config.cmake  dependencies.cmake  src-CMakeLists.txt  ~!~~внимание.txt
Doc/CMake/2026-01-21_dop_1/: READY_TO_USE.txt  YOUR_SYSTEM_CHECKLIST.md
Doc/CMake/2026-01-21_dop_2/: DEBUG_CMAKE_GUIDE.md  FIX_ManagerOpenCL_ERROR.md
Doc/CMake/2026-01-21_dop_3/: GPU-CMakeLists-FIXED.txt  Test-CMakeLists-FIXED.txt  src-CMakeLists-FIXED.txt
Doc/FFT/: AntennaFFTProcMax_USAGE.md  clFFT_SETUP.md
Doc/FFT/1/: BEFORE_AFTER.md  INTEGRATION_GUIDE.md  READY_TO_COMPILE.md  antenna_fft_proc_max_FIXED.cpp  НАЧНИ_ОТСЮДА.md  (+1 more)
Doc/GPU/: example_opencl_singleton.cpp  generator_gpu_refactored.cpp  generator_gpu_refactored.h  opencl_manager.cpp  opencl_manager.h
Doc/Generator/: sinusoid_example.md
Doc/LCM/4/: CMakeLists.txt  INTEGRATION_GUIDE.md  README.md  SUMMARY.txt  fractional_delay_architecture.md  fractional_delay_example.cpp  fractional_delay_processor.cpp  fractional_delay_processor.hpp
Doc/Matrix_project/: ARCHITECTURE_ANALYSIS.md  CMakeLists.txt  FINAL_REPORT.md  README.md  SUMMARY.md  analyze_profile.py  build.sh  matrix_invert.cpp  profiling_strategy.md  rocprof_counters.txt
Doc/MemRAII/: API_REFERENCE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_NEW.md  CHANGES.md  COMPLETE_CHANGES_SUMMARY.md  GPU_MEMORY_BUFFER_GUIDE.md  KERNEL_CACHE_SCALING.md  PERFORMANCE_OPTIMIZATION.md  QUICK_REFERENCE.md  README.md  examples_usage.hpp  test_unified_manager.hpp
Doc/NewManagerOpenCl/: INDEX.md  OPENCL_GUIDE.md  SUMMARY.md  command_queue_pool.cpp  command_queue_pool.hpp  kernel_program.cpp  kernel_program.hpp  opencl_compute_engine.cpp  opencl_compute_engine.hpp  opencl_core.cpp  opencl_core.hpp
Doc/OpenCL_tow_mem/: 00_START_HERE.md  ARCHITECTURE_DIAGRAMS.md  COMPLETE_SOLUTION_SUMMARY.md  FINAL_REPORT.md  INTEGRATION_INSTRUCTIONS.md  README_INDEX.md  analysis_clbuffer_integration.md  external_buffer_usage_guide.hpp  opencl_buffer_bridge.hpp  opencl_manager_extensions.cpp
Doc/Project_doc/: FractionalDelayProcessor_Detailed.md  OOP_SOLID_Patterns_Reference.md
Doc/copy/: antenna_fft_proc_max.~cpp
Doc/ref_clFFT/: FFT_Callback_Analysis_Optimization.md
Doc/Генератор/: EXAMPLE_signal_combined_delays.md  SUMMARY_FINAL.md  example_usage.cpp  generator_gpu_new.cpp
Doc/План/: FFT_Batch_Processing_Plan.md  clFFT_max  Переделка_kernl_FFT_max.txt  Потоки fft.txt
Matrix/: CMakeLists.txt  README.md  build.sh  hip_opencl_interop  hip_opencl_svm_bench  hip_opencl_svm_test  matrix_invert.cpp  matrix_invert_advanced.cpp  rocprof_counters.txt
Matrix/Analysis_HIP_OpenCL_Interop_2026-01/: ARCHITECTURE_DIAGRAM.md  EXECUTIVE_SUMMARY_RU.md  IMPLEMENTATION_GUIDE.md  README.md  START_HERE.txt  TECHNICAL_ANALYSIS.md
Matrix/Analysis_HIP_OpenCL_Interop_2026-01/code/: full_example  full_example.cpp  hip_opencl_svm_benchmark.cpp  hip_opencl_svm_test.cpp  svm_benchmark  svm_test
Matrix/data/: R_341.csv  R_85.csv
MemoryBank/: AI_SESSION_MEMORY.md  key_findings.md
Reports/: antenna_result.json  antenna_result.md  test_basic_result.md
cmake/: dependencies.cmake  gpu-config.cmake  platform-detection.cmake
config/: matrix_loader.cpp
include/Farrow/: lagrange_matrix_loader.hpp
include/GPU/: antenna_fft_proc_max.h  command_queue_pool.cpp  fft_result_printer.hpp  fractional_delay_processor.hpp  generator_gpu_new.h  gpu_memory_buffer.hpp  gpu_memory_manager.hpp  kernel_program.cpp  lagrange_matrix.json  memory_type.hpp  opencl_compute_engine.cpp  opencl_compute_engine.hpp  opencl_core.cpp  opencl_core.hpp  opencl_manager.h  regular_buffer.hpp  ~!gpu_memory_buffer.~hpp
include/ManagerOpenCL/: command_queue_pool.cpp  command_queue_pool.hpp  gpu_memory.hpp  gpu_memory_buffer.hpp  gpu_memory_manager.hpp  hybrid_buffer.hpp  i_memory_buffer.hpp  kernel_program.cpp  kernel_program.hpp  memory_type.hpp  opencl_compute_engine.cpp  opencl_compute_engine.hpp  opencl_core.cpp  opencl_core.hpp  opencl_manager.h  regular_buffer.hpp  svm_buffer.hpp  svm_capabilities.hpp
include/Test/: example_signal_combined_delays.hpp  example_usage.hpp  examples_clean.hpp  t_generator.hpp  test_antenna_fft_proc_max.hpp  test_fractional_delay_processor.hpp  test_hybrid_buffer.hpp  test_signal_sinusoids.hpp  ~examples_clean.~hpp  ~t_generator.~hpp  ~t_gpu_mem_buffer.~hpp
include/fft/: antenna_fft_proc_max.h  fft_result_printer.hpp
include/generator/: generator_gpu.h  generator_gpu_new.h
include/interface/: DelayParameter.h  antenna_fft_params.h  combined_delay_param.h  lfm_parameters.h
src/: CMakeLists.txt  main.cpp
src/GPU/: CMakeLists.txt  antenna_fft_proc_max.cpp  fractional_delay_processor.cpp  generator_gpu_new.cpp  gpu_memory_examples.cpp  gpu_memory_manager.cpp  opencl_manager.cpp
src/ManagerOpenCL/: CMakeLists.txt  gpu_memory_manager.cpp  opencl_manager.cpp
src/Test/: CMakeLists.txt  test_antenna_fft_proc_max.cpp  test_fractional_delay_processor.cpp  test_signal_sinusoids.cpp
src/fft/: antenna_fft_proc_max.cpp
src/generator/: generator_gpu.cpp  generator_gpu_new.cpp  ~!~generator_gpu.~cpp
(+70 files in other folders)
